objects/Misc_Issue__c.object
<CustomObject>
    <description>Ability to issue parts from a location without a stockable target location and without a source document. This is to manage issuance of parts to departments that are not online
    The above parts are called Miscellaneous Issues.
    There can be one or more products issued in a miscellaneous issue.
    Some of the products may be serialized.
    Serial numbers must be unique.
    Ability to track the history of all miscellaneous issue transactions only at the quantity level. History tracking at serial number level is not required.
    Only some users should be allowed to post Miscellaneous Issues.
Vertiba 12/18/13</description>
    <fields>
        <fullName>Department__c</fullName>
        <description>Name of the department to whom the parts are issued</description>
        <inlineHelpText>Name of the department to whom the parts are issued</inlineHelpText>
        <label>Department</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Issued_From_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Issued From Location</label>
        <referenceTo>SVMXC__Site__c</referenceTo>
        <relationshipLabel>Misc Issue</relationshipLabel>
        <relationshipName>Misc_Issue</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Misc_Issue_Number__c</fullName>
        <displayFormat>{0000}</displayFormat>
        <label>Misc Issue Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Posted_to_Inventory__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag indicates if this miscellaneous receipt has been posted to inventory or not</description>
        <inlineHelpText>Flag indicates if this miscellaneous receipt has been posted to inventory or not</inlineHelpText>
        <label>Posted to Inventory</label>
        <type>Checkbox</type>
    </fields>
    <label>Misc Issue</label>
    <nameField>
        <label>Misc Issue Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Misc Issue</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>